--- a/public/index.html
+++ b/public/index.html
@@ -29,22 +29,22 @@
     </script>
 </head>
 <body>
-    <h1 class="text-center text-4xl font-bold my-10 text-blue-500">Daftar WO</h1>
+    <h1 class="text-center text-8xl font-bold my-10 bg-gradient-to-r from-sky-500 to-indigo-500 bg-clip-text text-transparent">TWCSS</h1>
     <section class="mb-10">
         <a href="" class="bg-green-500 p-3 text-white inline-block m-3 hover:bg-green-600">Tambah</a>
         <p class="bg-yellow-200 m-3 p-4 py-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate temporibus velit libero placeat adipisci doloremque, laboriosam quo! Fugiat repudiandae eos quaerat tempore dolorem laborum exercitationem? Delectus ea animi itaque deleniti.</p>
     </section>
 
-    <h1>Daftar Pekerjaan Yang Masih Dikerjakan</h1>
-    <section class="mb-10">
-        <h2>Spacing</h2>
+    <h1 class="text-8xl font-bold text-center my-10">Daftar Pekerjaan Yang Masih Dikerjakan</h1>
+    <section class="mb-10 bg-gradient-to-t from-indigo-200 via-gray-300 to-blue-300">
+        <h2 class="text-3xl text-center">Spacing</h2>
         <div class="m-12">Margin</div>
         <div class="py-8">Padding</div>
     </section>
 
-    <section class="mb-10">
-        <h2>Sizing</h2>
-        <div class="w-32 h-32">Kontak 1</div>        
+    <section class="mb-10 bg-gradient-to-r from-cyan-500 to-blue-500">
+        <h2 class="text-3xl text-center">Sizing</h2>
+        <div class="w-32 h-32 bg-yellow-300">Kontak 1</div>        
     </section>
 
     <section class="mb-10 max-w-3xl mx-auto">
