Basic Utility - Bagian 2

--- a/public/index.html
+++ b/public/index.html
@@ -54,5 +54,16 @@
         <p class="mb-4 font-mono font-thin text-xl text-zinc-400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, natus porro laboriosam iste placeat maxime fugiat repudiandae fuga vero quos voluptatum quae aliquid in iure, recusandae possimus expedita id voluptates?</p>
         <p class="mb-4 font-inter italic">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem ex, quae facere sit harum amet eveniet suscipit illum natus optio unde expedita error corporis mollitia repellat alias inventore non enim?</p>
     </section>
+
+    <div class="max-w-xl h-96 bg-slate-300 mx-auto mt-[42px] overflow-scroll" style="background-image: url('https://source.unsplash.com/1000x600?computers')">
+        <p class="p-5 text-2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni doloribus ratione nihil libero! Iure aliquid velit suscipit quod commodi harum? Fugiat quae, mollitia ullam necessitatibus possimus in dolorum sapiente aliquam? Eaque quas autem accusantium sunt porro ea ducimus placeat quod officiis! Cupiditate obcaecati ab fugit minima, amet ut perferendis. Optio sequi consectetur accusamus harum explicabo, ducimus cupiditate! Modi, eaque? Voluptatibus facilis necessitatibus suscipit, excepturi esse maxime enim eaque delectus ab maiores corrupti eum. Iure aut nemo omnis consectetur ut. Adipisci debitis facilis vero necessitatibus, magni minus consequatur tenetur error tempora sed ducimus maiores? Sapiente commodi minima non quam est, dolore deserunt nisi nostrum illum nulla tempore totam quo similique quis suscipit ab necessitatibus nihil ut alias? Libero autem minus cumque doloremque, iste voluptate numquam, commodi explicabo est tempore ad et quaerat minima fugiat ut dolore repudiandae ea doloribus dolorum perspiciatis ullam enim nihil pariatur? Laboriosam repudiandae facere quis ipsam itaque illo magni doloremque, magnam suscipit nostrum excepturi aspernatur deleniti quibusdam repellat, nulla facilis beatae nemo laborum ex fuga autem! Hic sit aspernatur tempora quam eaque consequuntur. Ipsa maiores quaerat rem obcaecati expedita quae eveniet, non maxime sunt, corporis deleniti distinctio, rerum nulla aspernatur nemo voluptatum assumenda minus enim odio commodi!</p>
+    </div>
+
+    <div class="mt-32 max-w-xl mx-auto h-96 bg-slate-400 bg-cover rounded-md border-slate-600 shadow-xl shadow-slate-300 overflow-hidden border-8 brightness-150 flex" style="background-image: url('./img/norway.jpeg')">
+        <!-- <div class="w-full h-full bg-blue-300 mix-blend-multiply"></div> -->
+        <div class="w-[200px] h-[200px] backdrop-blur-sm bg-white/30 m-auto rounded-md "></div>
+    </div>
+
+    <div class="mb-20"></div>
 </body>
 </html>
