--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
+    <!-- <html lang="en" class="dark"> -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,7 @@
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <title>Coba Tailwind</title>
     <style type="text/tailwindcss"> 
-        /* jika pakai tailwindcss cdn. tp klo pakai file download setting ke style.css */
+        /* jika pakai tailwindcss cdn. tp klo pakai file download setting ke input.css */
         *{
             border: 1px solid red;
         }
@@ -28,7 +29,7 @@
         }
     </script>
 </head>
-<body>
+<body class="dark:bg-slate-800 dark:text-slate-200">
     <h1 class="text-center text-8xl font-bold my-10 bg-gradient-to-r from-sky-500 to-indigo-500 bg-clip-text text-transparent">TWCSS</h1>
     <section class="mb-10">
         <a href="" class="bg-green-500 p-3 text-white inline-block m-3 hover:bg-green-600">Tambah</a>
@@ -64,6 +65,46 @@
         <div class="w-[200px] h-[200px] backdrop-blur-sm bg-white/30 m-auto rounded-md "></div>
     </div>
 
+    <hr class="my-20" />
+
+    <div class="flex justify-center">
+        <span class="text-sm text-slate-500 mr-2">Light</span>
+        <input type="checkbox" id="toggle" class="hidden">
+        <label for="toggle">
+            <div class="w-9 h-5 bg-slate-500 rounded-full flex items-center p-1 cursor-pointer">
+                <div class="w-4 h-4 bg-white rounded-full toggle-circle"></div>
+            </div>
+        </label>
+        <span class="text-sm text-slate-500 ml-2">Dark</span>
+    </div>
+
+    <button class="my-10 bg-sky-500 px-5 py-2 rounded-full text-white font-semibold font-inter block mx-auto hover:bg-sky-600 active:bg-sky-700 focus:ring focus:ring-sky-300 dark:bg-slate-300 dark:text-slate-800 dark:hover:text-slate-900 dark:hover:bg-slate-200">Simpan</button>
+
+    <div class="max-w-lg my-10 border border-slate-200 rounded-xl mx-auto p-5 shadow-md font-inter hover:bg-sky-500 group">
+        <h5 class="font-bold text-slate-700 text-lg mb-3 group-hover:text-white">My Card</h5>
+        <p class="text-slate-700 group-hover:text-white selection:text-slate-900 selection:bg-lime-300 first-line:uppercase first-line:tracking-widest first-letter:text-7xl first-letter:float-left first-letter:mr-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum in dolor accusantium tenetur ullam nobis nam porro vitae. Qui natus debitis saepe autem quam itaque aperiam ab perferendis quasi accusamus?</p>
+    </div>
+
+    <div class="max-w-lg border border-slate-200 rounded-xl mx-auto shadow-md font-inter p-5">
+        <form action="">
+            <label for="email">
+                <span class="block font-semibold mb-1 text-slate-700 after:content-['*'] after:text-pink-500 after:ml-0.5">Email</span>
+                <input type="email" placeholder="Email" class="px-3 py-2 border shadow rounded w-full block text-sm placeholder:text-slate-400 focus:outline-none invalid:text-pink-700 invalid:focus:ring-pink-700 invalid:focus:border-pink-700 peer" id="email">
+                <p class="text-sm m-1 text-pink-700 invisible peer-invalid:visible">Email tidak valid</p>
+            </label>
+            
+        </form>
+    </div>
+
     <div class="mb-20"></div>
+
+    <script>
+        const checkbox= document.querySelector('#toggle');
+        const html= document.querySelector('html');
+
+        checkbox.addEventListener('click', function(){
+            checkbox.checked ? html.classList.add('dark') : html.classList.remove('dark')
+        })
+    </script>
 </body>
 </html>
