--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="">
+<html lang="en" class="scroll-smooth">
     <!-- <html lang="en" class="dark"> -->
 <head>
     <meta charset="UTF-8">
@@ -96,7 +96,55 @@
         </form>
     </div>
 
-    <div class="mb-20"></div>
+    <hr class="my-20">
+
+
+    <div class="w-40 h-40 bg-sky-500 mx-auto rounded-lg shadow-lg hover:scale-110 hover:rotate-45 hover:translate-x-14 hover:bg-pink-600 transition origin-top-left"></div>
+
+
+    <div class="w-40 h-40 mx-auto mt-20 group">
+        <div class="w-full h-full bg-sky-600 rounded-lg shadow-lg group-hover:rotate-180 origin-top-left transition duration-1000 delay-500"></div>
+    </div>
+
+
+    <div class="w-40 h-40 mx-auto mt-20 bg-sky-500 animate-spin-slow"></div>
+
+
+    <div class="w-40 h-40 mx-auto mt-20 bg-sky-500 animate-goyang"></div>
+
+
+    <div class="w-40 h-40 mx-auto mt-20 bg-sky-500 animate-spin"></div>
+
+
+    <div class="w-40 h-40 mx-auto mt-20 bg-sky-500 animate-ping"></div>
+
+
+    <div class="w-40 h-40 mx-auto mt-20 bg-sky-500 animate-pulse"></div>
+
+
+    <div class="w-40 h-40 mx-auto mt-20 bg-sky-500 animate-bounce rounded-full"></div>
+
+<hr class="my-20 border-t-4">
+
+<div class="container mx-auto">
+    <div class="border rounded-lg shadow-lg p-10 relative">
+        <div class="w-10 h-10 bg-pink-200 rounded-full flex absolute -top-5 -right-5 cursor-pointer"><span class="text m-auto">❌</span></div>
+        <img src="img/norway.jpeg" alt="" width="150" class="float-left mr-3">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit obcaecati non numquam veniam dolores aliquid ex quis! Fugiat, quo sequi quaerat possimus veniam dicta ipsa optio voluptas esse eum. Repellat voluptas dolorum possimus eveniet. Saepe nesciunt tempora similique accusamus! Amet dolores aspernatur quo magnam aperiam minima quas explicabo tenetur! Molestias.</p>
+    </div>
+</div>
+
+<div class="container rounded-lg border mx-auto shadow-lg p-10 mt-20 columns-3">
+    <img src="https://source.unsplash.com/600x400" alt="" class="mb-4">
+    <img src="https://source.unsplash.com/600x400" alt="" class="mb-4">
+    <img src="https://source.unsplash.com/600x400" alt="" class="mb-4">
+    <img src="https://source.unsplash.com/600x400" alt="" class="mb-4">
+    <img src="https://source.unsplash.com/600x400" alt="" class="mb-4">
+    <img src="https://source.unsplash.com/600x400" alt="" class="mb-4">
+</div>
+
+<a href="#" class="bg-sky-400 rounded-full right-5 bottom-5 flex fixed w-10 h-10"><span class="text-xl m-auto">🔝</span></a>
+<div class="mb-20"></div>
 
     <script>
         const checkbox= document.querySelector('#toggle');
